Fix #128714: GPv3: Don't erase behind the camera

If points are beind the camera, we don't really want to erase them. This
patch marks invalid coordinates thus preventing them from intersecting
with a eraser.